--- a/content/cs394n.md
+++ b/content/cs394n.md
@@ -6,7 +6,7 @@ I am a first-year Neuroscience PhD student currently rotating with [Robbe Goris]
 
 Potential topics I'd be interested in working on are:
 - Computational vision (e.g., neural network models of the visual system) 
-- Computational neuroscience in the broadest sense
+- Computational neuroscience (in the broadest sense)
 - Spiking neural networks
 - Reinforcement learning 
 - Parameter estimation (just a rough idea, not sure about it myself yet)
