--- a/content/cs394n.md
+++ b/content/cs394n.md
@@ -5,10 +5,10 @@ tien-dung.nguyen@utexas.edu
 I am a first-year Neuroscience PhD student currently rotating with [Robbe Goris](https://gorislab.github.io). I am interested in computational vision, specifially in how the brain processes visual inputs and turns them into predictions. 
 
 Potential topics I'd be interested in working on are:
-- Computational vision (e.g., neural network models of the visual system) 
-- Computational neuroscience (in the broadest sense)
+- Computational vision (e.g., models of the visual system) 
+- Computational neuroscience 
 - Spiking neural networks
 - Reinforcement learning 
-- Parameter estimation 
+- Bayesian approaches (e.g., variatiional inference)
 
 I have not teamed up with anyone yet.
