--- a/content/cs394n.md
+++ b/content/cs394n.md
@@ -9,6 +9,6 @@ Potential topics I'd be interested in working on are:
 - Computational neuroscience 
 - Spiking neural networks
 - Reinforcement learning 
-- Bayesian approaches (e.g., variatiional inference)
+- Bayesian approaches (e.g., variational inference)
 
 I have not teamed up with anyone yet.
