updated cs394 webpage

--- a/content/cs394n.md
+++ b/content/cs394n.md
@@ -11,4 +11,4 @@ Potential topics I'd be interested in working on are:
 - Reinforcement learning 
 - Bayesian approaches (e.g., variational inference)
 
-I have not teamed up with anyone yet.
+I have teamed up with Divya Prabhakaran.
